[MYF-95]add camel - not working yet
