# bundles/api/de.hf.dac.api.io/src/main/java/de/hf/dac/api/io/routes/job/RunnerParameter.java
@@ -22,6 +22,9 @@ import java.util.HashMap;
 import java.util.Map;
 
 public abstract class RunnerParameter implements Serializable {
+
+    private String beanClass;
+
     private Map<String, Object> params = new HashMap<>();
 
     public Map<String, Object> getParams() {
@@ -38,6 +41,14 @@ public abstract class RunnerParameter implements Serializable {
 
     public Object get(String name) {
         return this.params.get(name);
+    }
+
+    public void setBeanClass(String beanClass) {
+        this.beanClass = beanClass;
+    }
+
+    public String getBeanClass() {
+        return beanClass;
     }
 }
 
